<resources>
    <string name="app_name">StretchEz</string>
    <string name="welcome">Welcome to StretchEz</string>
    <string name="start_stretching">Start Stretching</string>
    <string name="work_out_page">This is Workout Page</string>
    <string name="testing_time">02:00</string>
    <string name="default_time">00:00</string>
    <string name="formatted_time">%02d:%02d</string>
    <string name="complete_time">Complete!</string>
    <string name="finish_stretching">Congratulations!</string>
    <string name="repeat_button">Repeat</string>
    <string name="return_button">Back</string>
    <string name="stretch_plan_title">Title of the Stretch Plan*</string>
    <string name="stretch_plan_title_label">Title</string>
    <string name="stretch_plan_description_label">Description</string>
    <string name="stretch_plan_description">Description of the Stretch Plan</string>
    <string name="stretch_plan_duration_label">Duration</string>
    <string name="stretch_plan_interval_label">Interval</string>
    <string name="stretch_plan_interval">Enter an interval between each Stretch Exercise</string>
    <string name="stretch_exercise_duration">Enter a duration for the Stretch Exercise</string>
    <string name="stretch_plan_start_button">Start the Stretch Plan</string>
    <string name="stretch_plan_interval_prompt">Choose the interval between Stretch Exercises</string>
    <string name="new_stretchPlan">New StretchPlan</string>
    <string name="select_action">Select Actions</string>
    <string name="save_button">Save</string>
    <string name="no_title_toast">Please Give A Title</string>
    <string name="delete_plan_snackbar">Stretch Plan Deleted</string>
    <string name="delete_exercise_snackbar">Stretch Exercise Deleted</string>
    <string name="undo_delete_snackbar">UNDO</string>
    <string name="stretch_plan_title_demo">Stretch Plan Title</string>
    <string name="stretch_exercise_title_demo">Stretch Exercise Title</string>
    <string name="title_1">title 1</string>
    <string name="title_2">title 2</string>
    <string name="title_3">title 3</string>
    <string name="title_4">title 4</string>
    <string name="title_5">title 5</string>
    <string name="head_title">Header Title</string>
    <string name="head_text">Header Text</string>
    <string name="subtitle">Subtitle</string>
    <string name="possible_exercises">Choice of Stretching Exercises</string>
    <string name="stretch_exercise_name_label">Name</string>
    <string name="stretch_exercise_description_label">Description</string>
    <string name="stretch_exercise_link_label">Link</string>
    <string name="stretch_exercise_name">Name of the Exercise*</string>
    <string name="stretch_exercise_description">Description of the Exercise</string>
    <string name="stretch_exercise_link">Youtube link of the Exercise*</string>
    <string name="stretch_exercise_minute">Choose minutes for the Stretch Exercise</string>
    <string name="stretch_exercise_second">Choose seconds for the Stretch Exercise</string>
    <string name="stretch_exercise_minute_label">Minutes: </string>
    <string name="stretch_exercise_second_label">Seconds: </string>
    <string name="new_exercise">New Exercise</string>
    <string name="title_home">Home</string>
    <string name="title_exercises">Exercises</string>
    <string name="title_stretch_plans">Stretch Plans</string>
    <string name="title_stretch_plan">Stretch Plan</string>
    <string name="add_new_action">Add New Exercises</string>
    <string name="remove_action_snackbar">Exercise Removed</string>
    <string name="next_exercise">Next Exercise: </string>
    <string name="helper_text_required">*Required</string>
    <string name="helper_text_youtube_link">Insert the video link from the Youtube Share Tab</string>
    <string name="template_exercise_snackbar">Template Exercise cannot be deleted</string>

    <string name="raspberry_test">Pi Test</string>
    <string name="test_button">Test</string>
    <string name="failure_message">Failed to fetch content</string>
    <string name="upload_test">Upload Test</string>
    <string name="upload_button">Upload</string>
    <string name="upload_stretchPlan_button">Upload StretchPlan</string>
    <string name="upload_stretchPlan_test">Upload StretchPlan Test</string>
    <string name="title_activity_bottom_navigation_main">BottomNavigationMainActivity</string>

</resources>