<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView4"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/stretch_exercise_name_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/stretch_exercise_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/stretch_exercise_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/stretch_exercise_description_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stretch_exercise_name" />

    <EditText
        android:id="@+id/stretch_exercise_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/stretch_exercise_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/stretch_exercise_link_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stretch_exercise_description" />

    <EditText
        android:id="@+id/stretch_exercise_link"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/stretch_exercise_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/stretch_exercise_duration"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/stretch_plan_duration_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stretch_exercise_link" />

    <TextView
        android:id="@+id/stretch_exercise_minute_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/stretch_exercise_minute_label"
        app:layout_constraintEnd_toStartOf="@id/stretch_exercise_minute_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stretch_exercise_duration"
        app:layout_constraintBottom_toTopOf="@id/stretch_exercise_save"/>

    <TextView
        android:id="@+id/stretch_exercise_second_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/stretch_exercise_second_label"
        app:layout_constraintEnd_toStartOf="@id/stretch_exercise_second_spinner"
        app:layout_constraintStart_toEndOf="@id/stretch_exercise_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/stretch_exercise_duration"
        app:layout_constraintBottom_toTopOf="@id/stretch_exercise_save"/>

    <Spinner
        android:id="@+id/stretch_exercise_minute_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:spinnerMode="dialog"
        android:prompt="@string/stretch_exercise_minute"
        app:layout_constraintEnd_toStartOf="@id/stretch_exercise_vertical_guideline"
        app:layout_constraintStart_toEndOf="@id/stretch_exercise_minute_label"
        app:layout_constraintTop_toBottomOf="@id/stretch_exercise_duration"
        app:layout_constraintBottom_toTopOf="@id/stretch_exercise_save" />

    <Spinner
        android:id="@+id/stretch_exercise_second_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:spinnerMode="dialog"
        android:prompt="@string/stretch_exercise_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/stretch_exercise_second_label"
        app:layout_constraintTop_toBottomOf="@id/stretch_exercise_duration"
        app:layout_constraintBottom_toTopOf="@id/stretch_exercise_save"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/stretch_exercise_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <Button
        android:id="@+id/stretch_exercise_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/bright_lavender"
        android:text="@string/save_button"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/stretch_exercise_cancel"
        app:layout_constraintEnd_toStartOf="@+id/stretch_exercise_vertical_guideline" />

    <Button
        android:id="@+id/stretch_exercise_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/bright_lavender"
        android:text="@string/return_button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stretch_exercise_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/stretch_exercise_minute_label" />


</androidx.constraintlayout.widget.ConstraintLayout>
