<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/stretch_plan_title_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText="@string/helper_text_required"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error_appearance"
        app:layout_constraintBottom_toTopOf="@id/stretch_plan_description_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/stretch_plan_title_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stretch_plan_title"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/stretch_plan_description_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/select_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stretch_plan_title_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/stretch_plan_description_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stretch_plan_description"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/select_action"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/bright_lavender"
        android:text="@string/select_action"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stretch_plan_description_container"
        app:layout_constraintBottom_toTopOf="@id/stretch_plan_interval"/>

    <TextView
        android:id="@+id/stretch_plan_interval"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/stretch_plan_interval_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_action" />

    <TextView
        android:id="@+id/stretch_plan_interval_second_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/stretch_exercise_second_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/stretch_plan_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/stretch_plan_interval"
        app:layout_constraintBottom_toTopOf="@id/stretch_plan_start"
        app:layout_constraintBaseline_toBaselineOf="@id/stretch_plan_interval_spinner"/>

    <Spinner
        android:id="@+id/stretch_plan_interval_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:prompt="@string/stretch_plan_interval_prompt"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/stretch_plan_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/stretch_plan_interval"
        app:layout_constraintBottom_toTopOf="@id/stretch_plan_start" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/stretch_plan_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <Button
        android:id="@+id/stretch_plan_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/bright_lavender"
        android:text="@string/start_stretching"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stretch_plan_interval_second_label"
        app:layout_constraintBottom_toTopOf="@+id/stretch_plan_save"/>


    <Button
        android:id="@+id/stretch_plan_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="10dp"
        android:background="@color/bright_lavender"
        android:text="@string/save_button"
        android:textColor="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/stretch_plan_cancel"
        app:layout_constraintEnd_toStartOf="@+id/stretch_plan_cancel"
        app:layout_constraintTop_toBottomOf="@id/stretch_plan_start"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/stretch_plan_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/bright_lavender"
        android:text="@string/return_button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stretch_plan_save"
        app:layout_constraintTop_toBottomOf="@+id/stretch_plan_start" />


</androidx.constraintlayout.widget.ConstraintLayout>